Changes project order

--- a/public/index.html
+++ b/public/index.html
@@ -402,91 +402,6 @@
         </div>
         <div class="spacer"></div>
 
-        <div class="gallery-frame">
-          <div class="card--gallery">
-            <div class="card--gallery-inner">
-              <div class="gallery-img-section">
-                <button
-                  id="gallery-btn-l"
-                  class="gallery-btn g-btn-left"
-                  type="button"
-                  onmousedown="gallery4Left()"
-                ></button>
-                <img
-                  id="gallery4-img"
-                  class="main-img"
-                  src="/images/gallery/music-trainer/melody.jpg"
-                />
-                <button
-                  id="gallery-btn-r"
-                  class="gallery-btn g-btn-right"
-                  type="button"
-                  onmousedown="gallery4Right()"
-                ></button>
-              </div>
-
-              <div class="gallery-right-section">
-                <h3>Music Experiment</h3>
-                <p style="padding-right: 0">
-                  <a
-                    href="https://ashthomasweb.github.io/personal--music-trainer/"
-                    target="_blank"
-                    >Trainer & Generator</a
-                  ><br /><br /><span class="sub-items">in-testing</span>
-                </p>
-                <br />
-                <h4>Tech</h4>
-                <ul>
-                  <li><span class="tech-item">ES6</span></li>
-                  <li><span class="tech-item">WebAudio</span></li>
-                  <li><span class="tech-item">Local Storage</span></li>
-                </ul>
-                <button
-                  class="github-btn"
-                  type="button"
-                  onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')"
-                >
-                  View GitHub Repo
-                </button>
-              </div>
-            </div>
-          </div>
-
-          <div class="card--gallery lower">
-            <div class="card--gallery-inner lower-text">
-              <p>
-                JavaScript ES6 and the WebAudio API are used to provide a
-                web-based ear-trainer and infinite music generator. The tools
-                help a student train their musical ear in the subjects of
-                melody, relative pitch, pitch memory, and tempo. The Music
-                Generator is an early passion project, however the underlying
-                logic in how to solve the musical problems works well.
-              </p>
-
-              <p>
-                The goal of the project, given further development, is that the
-                generator will express the power of Western Musical structures
-                (usually termed 'music theory') by allowing them to 'speak'
-                without human interaction, showcasing their merit and the
-                'natural behavior' of music.
-              </p>
-
-              <p>
-                The Melodic Trainer facilitates musical development through use
-                of an invaluable skill that is difficult to methodically
-                practice. The melodic idea consisting of the same note, but
-                different tones/instruments, is called "klangfarbenmelodie". The
-                trainer utilizes and teaches this with a mode randomizing the
-                playback to multiple orchestral instrument choices. This
-                develops the ear to be sensitive to pitch while listening to
-                instruments outside of the student's familiarity, accentuating
-                the 'pitch' side of the learning.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="spacer"></div>
         <!-- || Gallery4 Frame  -->
 
         <!-- || Gallery4 Frame  -->
@@ -572,6 +487,92 @@
                 and finally to a database, and a simple custom React UI and
                 candlestick-chart allows for historic viewing of the algorigthm
                 for testing.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="spacer"></div>
+
+        <div class="gallery-frame">
+          <div class="card--gallery">
+            <div class="card--gallery-inner">
+              <div class="gallery-img-section">
+                <button
+                  id="gallery-btn-l"
+                  class="gallery-btn g-btn-left"
+                  type="button"
+                  onmousedown="gallery4Left()"
+                ></button>
+                <img
+                  id="gallery4-img"
+                  class="main-img"
+                  src="/images/gallery/music-trainer/melody.jpg"
+                />
+                <button
+                  id="gallery-btn-r"
+                  class="gallery-btn g-btn-right"
+                  type="button"
+                  onmousedown="gallery4Right()"
+                ></button>
+              </div>
+
+              <div class="gallery-right-section">
+                <h3>Music Experiment</h3>
+                <p style="padding-right: 0">
+                  <a
+                    href="https://ashthomasweb.github.io/personal--music-trainer/"
+                    target="_blank"
+                    >Trainer & Generator</a
+                  ><br /><br /><span class="sub-items">in-testing</span>
+                </p>
+                <br />
+                <h4>Tech</h4>
+                <ul>
+                  <li><span class="tech-item">ES6</span></li>
+                  <li><span class="tech-item">WebAudio</span></li>
+                  <li><span class="tech-item">Local Storage</span></li>
+                </ul>
+                <button
+                  class="github-btn"
+                  type="button"
+                  onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')"
+                >
+                  View GitHub Repo
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card--gallery lower">
+            <div class="card--gallery-inner lower-text">
+              <p>
+                JavaScript ES6 and the WebAudio API are used to provide a
+                web-based ear-trainer and infinite music generator. The tools
+                help a student train their musical ear in the subjects of
+                melody, relative pitch, pitch memory, and tempo. The Music
+                Generator is an early passion project, however the underlying
+                logic in how to solve the musical problems works well.
+              </p>
+
+              <p>
+                The goal of the project, given further development, is that the
+                generator will express the power of Western Musical structures
+                (usually termed 'music theory') by allowing them to 'speak'
+                without human interaction, showcasing their merit and the
+                'natural behavior' of music.
+              </p>
+
+              <p>
+                The Melodic Trainer facilitates musical development through use
+                of an invaluable skill that is difficult to methodically
+                practice. The melodic idea consisting of the same note, but
+                different tones/instruments, is called "klangfarbenmelodie". The
+                trainer utilizes and teaches this with a mode randomizing the
+                playback to multiple orchestral instrument choices. This
+                develops the ear to be sensitive to pitch while listening to
+                instruments outside of the student's familiarity, accentuating
+                the 'pitch' side of the learning.
               </p>
             </div>
           </div>
@@ -715,19 +716,19 @@
           <div class="card--gallery lower">
             <div class="card--gallery-inner lower-text">
               <p>
-                A rainy-day project to capture the motion of the
-                planets of the solar system. I've loved space and the stars
-                since I was a young kid. This project is a way that I can do some
-                'exploring' of space on my own. Next task is to work up a more
-                convincing Moon Component, and add the appropriate moons to each
-                planet. There are almost 200 moons in our solar system.
+                A rainy-day project to capture the motion of the planets of the
+                solar system. I've loved space and the stars since I was a young
+                kid. This project is a way that I can do some 'exploring' of
+                space on my own. Next task is to work up a more convincing Moon
+                Component, and add the appropriate moons to each planet. There
+                are almost 200 moons in our solar system.
               </p>
               <p>
                 The imaging effect is a combination of CSS and React.
                 Positioning is found from a normally-positioned object, whose
                 coordinates are then cast onto a separate plane that is rotated
-                down to a horizontal 'orbit'. Combined it forms a 3D illusion, and
-                not a true 3D space.
+                down to a horizontal 'orbit'. Combined it forms a 3D illusion,
+                and not a true 3D space.
               </p>
               <p>
                 The background is an image from the new James Web Telescope. The
@@ -795,7 +796,7 @@
             </div>
           </div>
 
-          <div class="card--gallery lower" style="height: 300px;">
+          <div class="card--gallery lower" style="height: 300px">
             <div class="card--gallery-inner lower-text">
               <p>
                 uLog is a simple test package for JavaScript and Node.js. It has
@@ -869,7 +870,7 @@
             </div>
           </div>
 
-          <div class="card--gallery lower " style="height: 320px;">
+          <div class="card--gallery lower" style="height: 320px">
             <div class="card--gallery-inner lower-text">
               <p>
                 This is a desktop application used to query from multiple
