Updates scroll animation

--- a/public/index.html
+++ b/public/index.html
@@ -230,7 +230,7 @@
                 delivery business, primarily conducted and advertised on mobile.
                 The client requested that all materials be presented the same,
                 while on a single page, with no loss of content on mobile. I
-                worked in tandem with a UX researcher/writer to achieve the
+                worked in tandem with a UX writer to achieve the
                 client's requests and generate site language and microcopy. The
                 project's primary challenge was in it's layout and copy needs
                 rather than it's technical build.
